# realtime_processing

./: .gitignore  Makefile  README.md  README_PROJETO.md  TODO.md  databricks_parquet_streaming.ipynb  demo_nyctaxi_streaming.ipynb  demo_nyctaxi_streaming_no_dbfs.ipynb  demo_structured_streaming_completo.ipynb  docker-compose.infra.yml  docker-compose.pinot.yml  docker-compose.pipeline.yml  docker-compose.yml  environment.yml
TrabalhoAndre/: README.md  generate_seed_data.py  process_to_silver.py  stream_app.py
TrabalhoAndre/dados_raw/: sellers_targets.csv
TrabalhoAndre/dados_silver/: sellers_silver.csv
aula01/: README.md  create_topics.py  requirements.txt
aula01/demo04/: demo4_join_static.py  demo4_join_stream.py  demo4_producer.py
aula01/demo05/: demo5_consumer_exercise.py  demo5_consumer_plot.py  demo5_data.json  demo5_producer.py  desafio.md  desafio_demo05_plotly.py  desafio_readme.md  plot_demo5.py  points.csv
aula01/desafio01/: README.md  create_topicos.py  demo_consumer.py  (+2 more)
aula07/: README.md
desafio_1/: consumer.py  create_topics.py  events_batch.json  plot_results.py  producer.py
simular black friday/: READM.md  requirements.txt
trabalho/: .env.example  .gitignore  ARCHITECTURE.md  README.md  README_GERADORES.md  README_PROJETO.md  README_Trabalho.md  docker-compose.yml  environment.yml
trabalho-final/: requirements.txt
trabalho_final/: Dockerfile  README.md  README_GERADORES.md  dashboard.py  docker-compose.yml  generator.py  readme.md  requirements.txt  setup_db.py
trabalho_final/infra/django/trabalho_final/: main.py  pyproject.toml
(+103 files in other folders)
