[project]
name = "trabalho-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.5,<3.0",
    "django>=5.2,<6.0",
    "orjson>=3.10,<4.0",
    "polars>=1.12,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "requests>=2.32,<3.0",
]
